--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "start": "nodemon src/server.js"
+        "start": "nodemon --exitcrash src/server.js"
     },
     "dependencies": {
-        "cors": "2.8.5",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "helmet": "^7.1.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.1"
+        "nodemon": "^3.1.4"
     },
     "keywords": []
 }
